Add benchmark that compares KisScanlineFill and KisMultiThreadedScanlineFill

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -18,6 +18,10 @@ set(kis_low_memory_benchmark_SRCS kis_low_memory_benchmark.cpp)
 set(KisAnimationRenderingBenchmark_SRCS KisAnimationRenderingBenchmark.cpp)
 set(kis_filter_selections_benchmark_SRCS kis_filter_selections_benchmark.cpp)
 set(kis_thumbnail_benchmark_SRCS kis_thumbnail_benchmark.cpp)
+set(KisMultiThreadedScanlineFillBenchmark_FillColor_SRCS KisMultiThreadedScanlineFillBenchmarks/fillColor.cpp)
+set(KisMultiThreadedScanlineFillBenchmark_FillColorExternal_SRCS KisMultiThreadedScanlineFillBenchmarks/fillColorExternal.cpp)
+set(KisMultiThreadedScanlineFillBenchmark_FillSelection_SRCS KisMultiThreadedScanlineFillBenchmarks/fillSelection.cpp)
+set(KisMultiThreadedScanlineFillBenchmark_FillSelectionWithBoundary_SRCS KisMultiThreadedScanlineFillBenchmarks/fillSelectionWithBoundary.cpp)
 
 krita_add_benchmark(KisDatamanagerBenchmark TESTNAME krita-benchmarks-KisDataManager ${kis_datamanager_benchmark_SRCS})
 krita_add_benchmark(KisHLineIteratorBenchmark TESTNAME krita-benchmarks-KisHLineIterator ${kis_hiterator_benchmark_SRCS})
@@ -37,6 +41,10 @@ krita_add_benchmark(KisLowMemoryBenchmark TESTNAME krita-benchmarks-KisLowMemory
 krita_add_benchmark(KisAnimationRenderingBenchmark TESTNAME krita-benchmarks-KisAnimationRenderingBenchmark ${KisAnimationRenderingBenchmark_SRCS})
 krita_add_benchmark(KisFilterSelectionsBenchmark TESTNAME krita-image-KisFilterSelectionsBenchmark ${kis_filter_selections_benchmark_SRCS})
 krita_add_benchmark(KisThumbnailBenchmark TESTNAME krita-benchmarks-KisThumbnail ${kis_thumbnail_benchmark_SRCS})
+krita_add_benchmark(KisMultiThreadedScanlineFillBenchmark_FillColor TESTNAME krita-benchmarks-KisMultiThreadedScanlineFillBenchmark_FillColor ${KisMultiThreadedScanlineFillBenchmark_FillColor_SRCS})
+krita_add_benchmark(KisMultiThreadedScanlineFillBenchmark_FillColorExternal TESTNAME krita-benchmarks-KisMultiThreadedScanlineFillBenchmark_FillColorExternal ${KisMultiThreadedScanlineFillBenchmark_FillColorExternal_SRCS})
+krita_add_benchmark(KisMultiThreadedScanlineFillBenchmark_FillSelection TESTNAME krita-benchmarks-KisMultiThreadedScanlineFillBenchmark_FillSelection ${KisMultiThreadedScanlineFillBenchmark_FillSelection_SRCS})
+krita_add_benchmark(KisMultiThreadedScanlineFillBenchmark_FillSelectionWithBoundary TESTNAME krita-benchmarks-KisMultiThreadedScanlineFillBenchmark_FillSelectionWithBoundary ${KisMultiThreadedScanlineFillBenchmark_FillSelectionWithBoundary_SRCS})
 
 target_link_libraries(KisDatamanagerBenchmark  kritaimage  kritatestsdk)
 target_link_libraries(KisHLineIteratorBenchmark  kritaimage  kritatestsdk)
@@ -54,6 +62,10 @@ target_link_libraries(KisGradientBenchmark  kritaimage  kritatestsdk)
 target_link_libraries(KisLowMemoryBenchmark  kritaimage  kritatestsdk)
 target_link_libraries(KisAnimationRenderingBenchmark  kritaimage kritaui  kritatestsdk)
 target_link_libraries(KisFilterSelectionsBenchmark   kritaimage  kritatestsdk)
+target_link_libraries(KisMultiThreadedScanlineFillBenchmark_FillColor kritaimage kritatestsdk)
+target_link_libraries(KisMultiThreadedScanlineFillBenchmark_FillColorExternal kritaimage kritatestsdk)
+target_link_libraries(KisMultiThreadedScanlineFillBenchmark_FillSelection kritaimage kritatestsdk)
+target_link_libraries(KisMultiThreadedScanlineFillBenchmark_FillSelectionWithBoundary kritaimage kritatestsdk)
 
 if(HAVE_XSIMD)
 ko_compile_for_all_implementations_no_scalar(__per_arch_composition_objects kis_composition_benchmark.cpp)
