MLT: check pointers before dereferencing them
This prevents MLT from crashing krita on startup if the MLT
plugins cannot be found. MLT probably will still crash if you
create an animation with audio and start playing it, though.

And it doesn't really fix MLT's rather fragile plugin loading
mechanism...

--- a/3rdparty/ext_mlt/CMakeLists.txt
+++ b/3rdparty/ext_mlt/CMakeLists.txt
@@ -35,6 +35,7 @@ kis_ExternalProject_Add_with_separate_builds_apple(
         COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0002-Ifdef-away-Xlib-and-RTAudio.patch
         COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0003-Do-not-build-bin-melt-on-Android.patch
         COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0001-macOS-allow-finding-plugins-outside-bundles.patch
+        COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0004-MLT-check-pointers-before-dereferencing.patch
 
   CMAKE_ARGS ${GLOBAL_PROFILE} -DMOD_OPENCV=OFF ${WIN32_CMAKE_ARGS} -DCMAKE_INSTALL_PREFIX=${PREFIX_ext_mlt} ${BUILD_EXTRA_OPTS}
 
