Apply i18n to spinbox percent values

--- a/libs/widgetutils/CMakeLists.txt
+++ b/libs/widgetutils/CMakeLists.txt
@@ -47,6 +47,7 @@ set(kritawidgetutils_LIB_SRCS
     KisRepaintDebugger.cpp
     KisMenuStyleDontCloseOnAlt.cpp
     KisSpinBoxPluralHelper.cpp
+    KisDoubleSpinBoxPluralHelper.cpp
     KisScreenMigrationTracker.cpp
 
     config/kcolorscheme.cpp
