--- a/plugins/impex/pdf/CMakeLists.txt
+++ b/plugins/impex/pdf/CMakeLists.txt
@@ -9,4 +9,5 @@ kis_add_library(kritapdfimport MODULE ${kritapdfimport_SOURCES})
 target_link_libraries(kritapdfimport kritaui Poppler::Qt5)
 
 install(TARGETS kritapdfimport  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
-install(PROGRAMS krita_pdf.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
+
+install(FILES krita_pdf.desktop DESTINATION ${KDE_INSTALL_APPDIR})
