--- a/plugins/impex/raw/CMakeLists.txt
+++ b/plugins/impex/raw/CMakeLists.txt
@@ -21,5 +21,5 @@ kis_add_library(krita_raw_import MODULE ${krita_raw_import_SOURCES})
 target_link_libraries(krita_raw_import kritaui KF5::KDcraw kritaexifcommon)
 
 install(TARGETS krita_raw_import  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
-install( PROGRAMS  krita_raw.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
 
+install(FILES krita_raw.desktop DESTINATION ${KDE_INSTALL_APPDIR})
