--- a/plugins/impex/spriter/CMakeLists.txt
+++ b/plugins/impex/spriter/CMakeLists.txt
@@ -10,4 +10,4 @@ target_link_libraries(kritaspriterexport kritaui kritaimpex)
 
 install(TARGETS kritaspriterexport  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
 
-install( PROGRAMS  krita_spriter.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
+install(FILES krita_spriter.desktop DESTINATION ${KDE_INSTALL_APPDIR})
