--- a/plugins/impex/gif/CMakeLists.txt
+++ b/plugins/impex/gif/CMakeLists.txt
@@ -25,4 +25,5 @@ kis_add_library(kritagifimport MODULE ${kritagifimport_SOURCES})
 target_link_libraries(kritagifimport kritaui ${GIF_LIBRARY})
 
 install(TARGETS kritagifimport  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
-install( PROGRAMS  krita_gif.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
+
+install(FILES krita_gif.desktop DESTINATION ${KDE_INSTALL_APPDIR})
