--- a/plugins/impex/heightmap/CMakeLists.txt
+++ b/plugins/impex/heightmap/CMakeLists.txt
@@ -29,4 +29,5 @@ kis_add_library(kritaheightmapexport MODULE ${kritaheightmapexport_SOURCES})
 target_link_libraries(kritaheightmapexport kritaui kritaimpex)
 
 install(TARGETS kritaheightmapexport  DESTINATION ${KRITA_PLUGIN_INSTALL_DIR})
-install( PROGRAMS  krita_heightmap.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR})
+
+install(FILES krita_heightmap.desktop DESTINATION ${KDE_INSTALL_APPDIR})
