Replace the Backers tab with a Sponsors tab
The last kickstarter is a long time ago, and I'm not even sure we
still have permission for all those names. And our sponsors asked
for this.

The png files have been optipng'ed

--- a/krita/CMakeLists.txt
+++ b/krita/CMakeLists.txt
@@ -84,6 +84,7 @@ set(krita_QRCS
     ${CMAKE_SOURCE_DIR}/krita/pics/branding/${BRANDING}/branding.qrc
     ${CMAKE_SOURCE_DIR}/krita/data/splash/splash.qrc
     ${CMAKE_SOURCE_DIR}/krita/banner/banner.qrc
+    ${CMAKE_SOURCE_DIR}/krita/pics/sponsors/sponsors.qrc
     CACHE INTERNAL "krita_QRCS"
 )
 
