Make it so we can paint KoSvgTextShapes inside the GlyphSelector.

--- a/libs/libqml/plugins/kritasketchplugin/CMakeLists.txt
+++ b/libs/libqml/plugins/kritasketchplugin/CMakeLists.txt
@@ -16,6 +16,7 @@ set(kritasketchplugin_SRCS
     MouseTracker.cpp
     PanelConfiguration.cpp
     PropertyContainer.cpp
+    SvgTextLabel.cpp
 )
 
 set(kritasketch_kritaintegrationmodels_SRCS
