Simplify opentype feature retrieval, add KoOpenTypeFeature info for tooltips.
It seems we won't be able to support ligatures at this level as there's no API
in harfbuzz to give info about ligatures.

--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -225,6 +225,7 @@ set(kritaflake_SRCS
     text/KoCssTextUtils.cpp
     text/KoPolygonUtils.cpp
     text/KoFontGlyphModel.cpp
+    text/KoOpenTypeFeatureInfoFactory.cpp
 
     resources/KoSvgSymbolCollectionResource.cpp
     resources/KoGamutMask.cpp
