Create text properties manager that uploads text property data to the canvas resources.

--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -224,6 +224,7 @@ set(kritaflake_SRCS
     text/KoFontRegistry.cpp
     text/KoCssTextUtils.cpp
     text/KoPolygonUtils.cpp
+    text/KoSvgTextPropertyData.cpp
 
     resources/KoSvgSymbolCollectionResource.cpp
     resources/KoGamutMask.cpp
