--- a/plugins/dockers/CMakeLists.txt
+++ b/plugins/dockers/CMakeLists.txt
@@ -38,3 +38,4 @@ add_subdirectory(snapshotdocker)
 add_subdirectory(storyboarddocker)
 add_subdirectory(widegamutcolorselector)
 add_subdirectory(brushhud)
+add_subdirectory(textproperties)
