Setup lager model for text properties and read the writing mode of the selected shape.
This is only basic setup until I get a little bit more help with lager.

--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -225,6 +225,7 @@ set(kritaflake_SRCS
     text/KoCssTextUtils.cpp
     text/KoPolygonUtils.cpp
     text/KoSvgTextPropertyData.cpp
+    text/lager/KoSvgTextPropertiesModel.cpp
 
     resources/KoSvgSymbolCollectionResource.cpp
     resources/KoGamutMask.cpp
