Fix building libheif on Android
(even though we don't currently build it on Android in our scripts)

TODO: check why we don't build libheif on Android

--- a/3rdparty/ext_heif/CMakeLists.txt
+++ b/3rdparty/ext_heif/CMakeLists.txt
@@ -126,6 +126,7 @@ ExternalProject_Add(
           COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/A06-common-threading.patch
           COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0001-Silence-nasm-2.15-warnings.patch
           COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0003-Skip-PDB-in-MinGW.patch
+          COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/0001-ext_heif-Make-sure-that-pthreads-are-not-linked-it-o.patch
 
     BUILD_COMMAND ""
     CONFIGURE_COMMAND ""
