--- a/3rdparty/ext_ninja/CMakeLists.txt
+++ b/3rdparty/ext_ninja/CMakeLists.txt
@@ -3,6 +3,7 @@ SET(PREFIX_ext_ninja "${EXTPREFIX}" )
 if (NOT CMAKE_CROSSCOMPILING OR APPLE)
 ExternalProject_Add(ext_ninja
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
+    DOWNLOAD_NAME ninja-v1.11.0.tar.gz
     URL https://github.com/ninja-build/ninja/archive/v1.11.0.tar.gz
     URL_HASH SHA256=3c6ba2e66400fe3f1ae83deb4b235faf3137ec20bd5b08c29bfc368db143e4c6
 
