--- a/3rdparty/ext_openexr/CMakeLists.txt
+++ b/3rdparty/ext_openexr/CMakeLists.txt
@@ -7,6 +7,7 @@ endif()
 
 ExternalProject_Add( ext_openexr
     DOWNLOAD_DIR ${EXTERNALS_DOWNLOAD_DIR}
+    DOWNLOAD_NAME openexr-v2.5.8.tar.gz
     URL https://github.com/AcademySoftwareFoundation/openexr/archive/v2.5.8.tar.gz
     URL_HASH SHA256=db261a7fcc046ec6634e4c5696a2fc2ce8b55f50aac6abe034308f54c8495f55
 
