--- a/packaging/android/apk/gradle.properties
+++ b/packaging/android/apk/gradle.properties
@@ -1,2 +1,3 @@
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m
+# -XX:MaxPermSize=512m is not used on JVM8+
+org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
