--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -226,6 +226,8 @@ set(kritaflake_SRCS
     text/KoPolygonUtils.cpp
     text/KoSvgTextPropertyData.cpp
     text/lager/KoSvgTextPropertiesModel.cpp
+    text/lager/CssLengthPercentageModel.cpp
+    text/lager/LineHeightModel.cpp
 
     resources/KoSvgSymbolCollectionResource.cpp
     resources/KoGamutMask.cpp
