Add models for text indent, tab size and text transform, improve sub model access.
The submodels need to be exposed separately to QML as lagerQt doesn't do this for us.

--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -228,6 +228,9 @@ set(kritaflake_SRCS
     text/lager/KoSvgTextPropertiesModel.cpp
     text/lager/CssLengthPercentageModel.cpp
     text/lager/LineHeightModel.cpp
+    text/lager/TextIndentModel.cpp
+    text/lager/TabSizeModel.cpp
+    text/lager/TextTransformModel.cpp
 
     resources/KoSvgSymbolCollectionResource.cpp
     resources/KoGamutMask.cpp
