Implement basic application of text properties inside the text tool, via an interface.

--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -225,6 +225,7 @@ set(kritaflake_SRCS
     text/KoCssTextUtils.cpp
     text/KoPolygonUtils.cpp
     text/KoSvgTextPropertyData.cpp
+    text/KoSvgTextPropertiesInterface.h
     text/lager/KoSvgTextPropertiesModel.cpp
     text/lager/CssLengthPercentageModel.cpp
     text/lager/LineHeightModel.cpp
