--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -540,7 +540,7 @@ if (Qt5QuickWidgets_FOUND)
 endif()
 
 
-if (NOT WIN32 AND NOT APPLE AND NOT ANDROID)
+if (NOT WIN32 AND NOT APPLE AND NOT ANDROID AND NOT HAIKU)
 
     find_package(Qt5 ${MIN_QT_VERSION} REQUIRED X11Extras)
 
