--- a/build-tools/ci-scripts/android.yml
+++ b/build-tools/ci-scripts/android.yml
@@ -35,7 +35,7 @@
 
 .android-packages-base:
   extends:
-  - android-build
+  - .android-build-base
   when: manual
   interruptible: false
   variables:
