--- a/build-tools/ci-scripts/android.yml
+++ b/build-tools/ci-scripts/android.yml
@@ -76,8 +76,12 @@ android-build-armeabi-v7a:
     KRITACI_SKIP_COMMON_ARTIFACTS: True
 
 android-build-appbundle:
-  extends:
-  - .android-build-base
+  stage: bundle
+  image: invent-registry.kde.org/sysadmin/ci-images/krita-android-builder:latest
+  tags:
+    - Linux
+  when: manual
+  interruptible: false
   needs:
       artifacts: true
     - job: android-build-armeabi-v7a
