--- a/build-tools/ci-scripts/windows.yml
+++ b/build-tools/ci-scripts/windows.yml
@@ -3,10 +3,8 @@ windows-build:
   image: invent-registry.kde.org/sysadmin/ci-images/krita-windows-builder:latest
   tags:
     - Windows
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "schedule"
-      when: never
-    - when: always
+  extends:
+    - .ci-always-job-mixin
   variables:
     KDECI_CC_CACHE: "C:\\Gitlab\\Caches\\krita-windows"
     KDECI_CACHE_PATH: "C:\\Gitlab\\Artifacts\\krita-windows"
@@ -51,11 +49,8 @@ windows-build:
 
 windows-packages:
   extends:
-  - windows-build
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "schedule"
-      when: never
-    - when: manual
+    - windows-build
+    - .ci-manual-job-mixin
   interruptible: false
   variables:
     KDECI_ONLY_BUILD: "True"
