--- a/libs/widgetutils/CMakeLists.txt
+++ b/libs/widgetutils/CMakeLists.txt
@@ -39,6 +39,7 @@ set(kritawidgetutils_LIB_SRCS
     kis_multipliers_double_slider_spinbox.cpp
     kis_spin_box_unit_manager.cpp
     kis_font_family_combo_box.cpp
+    KisFontFamilyValidator.cpp
     KisWrappableHBoxLayout.cpp
     KisPopupSelfActivatingLineEdit.cpp
     KisRecentFilesManager.cpp
